Added list.it libraries to our data to make it easier later. Now the sidebar html has css and js to test how things work.

--- a/addonSDK/data/test.html
+++ b/addonSDK/data/test.html
@@ -1,9 +1,13 @@
 <html>
     <head>
+        <link href="css/test.css" rel="stylesheet">
+        <script src='js/libs/jquery.js'></script>
+        <script src="js/test.js"></script>
     </head>
     <body>
         <h4>Hello there.</h4>
         <div>Look at this efficient test.</div>
         <img src="img/cat.png" title="cat!">
+        <div id="testDIV" class="testing"></div>
     </body>
 </html>
